:mod:`eulfedora`.  New features in each version should be listed, with
any necessary information about installation or upgrade notes.

0.19 (dev)
----------

* New command-line script ``fedora-checksums`` for datastream
  checksums validation and repair.  See :doc:`scripts` for more
  details.
* :class:`eulfedora.models.DigitalObject` now provides access to the
  Fedora built-in audit trail; see
  :attr:`eulfedora.models.DigitalObject.audit_trail` 

0.18.1
------

* Bugfix: Default checksum type for
  :class:`~eulfedora.models.DatastreamObject` was previously ignored
  when creating a new datastream from scratch (e.g., when ingesting a
  new object).  In certain versions of Fedora, this could result in
  datastreams with missing checksums (checksum type of 'DISABLED',
  checksum value of 'none').

0.18.0
------

* Exposed RIsearch ``count`` return option via
  :meth:`eulfedora.api.ResourceIndex.count_statements`
* :class:`~eulfedora.models.DatastreamObject` now supports setting
  datastream content by URI through the new
  :attr:`~eulfedora.models.DatastreamObject.ds_location` attribute 
  (this is in addition to the previously-available
  :attr:`~eulfedora.models.DatastreamObject.content` attribute).


0.17.0
------

* Previously, several of the REST API calls in
  :class:`eulfedora.api.REST_API` suppressed errors and only returned
  True or False for success or failure; this made it difficult to
  determine what went wrong when an API call fails.  This version of
  :mod:`eulfedora` revises that logic so that all methods in
  :class:`eulfedora.api.REST_API` will raise exceptions when an
  exception-worthy error occurs (e.g., permission denied, object not
  found, etc. - anything that returns a 40x or 500 HTTP error response
  from Fedora).  The affected REST methods are:

    * :meth:`~eulfedora.api.REST_API.addDatastream`
    * :meth:`~eulfedora.api.REST_API.modifyDatastream`
    * :meth:`~eulfedora.api.REST_API.purgeDatastream` 